# kmsrdp

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  kmsrdp.spec
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deb.yml  rpm.yml
crates/rdpcore-cliprdr/: Cargo.toml
crates/rdpcore-cliprdr/src/: lib.rs  pdu.rs
crates/rdpcore-connector/: Cargo.toml
crates/rdpcore-connector/src/: error.rs  lib.rs
crates/rdpcore-dvc/: Cargo.toml
crates/rdpcore-dvc/src/: echo.rs  lib.rs  pdu.rs
crates/rdpcore-pdu/: Cargo.toml
crates/rdpcore-pdu/fuzz/: Cargo.toml
crates/rdpcore-pdu/fuzz/fuzz_targets/: decode_wire.rs
crates/rdpcore-pdu/src/: ber.rs  capability_sets.rs  client_info.rs  cursor.rs  fastpath.rs  finalization.rs  gcc.rs  headers.rs  lib.rs  licensing.rs  mcs.rs  nscodec.rs  per.rs  pointer.rs  rdp6.rs  surface_commands.rs  svc.rs  tpdu.rs  tpkt.rs  utf16.rs  x224.rs
crates/rdpcore-pdu/tests/: wire_stack.rs
crates/rdpcore-rdpdr/: Cargo.toml
crates/rdpcore-rdpdr/fuzz/: Cargo.toml
crates/rdpcore-rdpdr/fuzz/fuzz_targets/: decode_rdpdr.rs
crates/rdpcore-rdpdr/src/: diagnostic.rs  irp.rs  lib.rs  pdu.rs
crates/rdpcore-rdpeai/: Cargo.toml
crates/rdpcore-rdpeai/src/: lib.rs  pdu.rs
crates/rdpcore-rdpegfx/: Cargo.toml
crates/rdpcore-rdpegfx/src/: encoder.rs  h264_headers.rs  lib.rs  nvenc_enc.rs  openh264_enc.rs  pdu.rs  select.rs  session.rs  vaapi_enc.rs
crates/rdpcore-rdpsnd/: Cargo.toml
crates/rdpcore-rdpsnd/src/: lib.rs  pdu.rs
crates/rdpcore-server/: Cargo.toml
crates/rdpcore-server/src/: credentials.rs  credssp.rs  diff.rs  display.rs  input.rs  lib.rs  server.rs  transport.rs
crates/rdpcore-transport/: Cargo.toml
crates/rdpcore-transport/src/: lib.rs  scheduler.rs
debian/: changelog  control  copyright  postinst  rules
kmsrdp/: Cargo.toml
kmsrdp/src/: audio.rs  audio_input.rs  capture.rs  clipboard.rs  config_check.rs  display_hub.rs  gpu_detile.rs  lib.rs  logging.rs  main.rs  nvfbc.rs  pulse_util.rs  rdpdr_diagnostic.rs  rdpdr_fuse.rs  session.rs  session_watcher.rs  tls.rs  uinput.rs  x11_unicode.rs
kmsrdp/tests/: channel_codecs.rs
