[package]
name = "kmsrdp"
version = "0.1.33"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "DRM/KMS-based RDP remote desktop server in pure Rust"
repository = "https://github.com/yamamo-to/kmsrdp"

[dependencies]
anyhow = "1.0.103"
arboard = { version = "3.6.1", default-features = false }
async-trait = "0.1.89"
drm = "0.15.0"
drm-fourcc = "2.2.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libc = "0.2.186"
libloading = "0.9.0"
memmap2 = { version = "0.9.11", default-features = false }
rand = "0.10.2"
rdpcore-cliprdr = { path = "../crates/rdpcore-cliprdr" }
rdpcore-rdpdr = { path = "../crates/rdpcore-rdpdr" }
rdpcore-rdpeai = { path = "../crates/rdpcore-rdpeai" }
rdpcore-rdpsnd = { path = "../crates/rdpcore-rdpsnd" }
rdpcore-server = { path = "../crates/rdpcore-server" }
rcgen = "0.14.8"
rustls = "0.23.42"
futures-util = "0.3"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
uinput-sys = "0.1.7"
x11rb = { version = "0.14.0", features = ["xtest"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
fuser = "0.17.0"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }

[features]
default = []
# Pulls in the RDPDR directory-listing self-test consumer (env
# KMSRDP_RDPDR_DIAGNOSTIC). Not needed for normal FUSE drive redirection.
rdpdr-diagnostic = ["rdpcore-rdpdr/diagnostic"]
# Compiles the DVC echo smoke-test handler and RdpServer::with_echo_smoke_test.
dvc-echo = ["rdpcore-server/dvc-echo"]

[dev-dependencies]
rdpcore-dvc = { path = "../crates/rdpcore-dvc" }
rdpcore-pdu = { path = "../crates/rdpcore-pdu" }

