[package]
name = "rdpcore-cliprdr"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "From-scratch MS-RDPECLIP (CLIPRDR) clipboard virtual channel, text formats only"

[dependencies]
rdpcore-pdu = { path = "../rdpcore-pdu" }
tokio = { version = "1.52.3", features = ["sync"] }
