[package]
name = "rdpcore-rdpegfx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "From-scratch MS-RDPEGFX (Graphics Pipeline) over the Graphics dynamic virtual channel: PDU codec + AVC420 session"

[features]
default = ["openh264"]
openh264 = ["dep:openh264"]
# Optional hardware backends (not enabled by default).
# vaapi needs libva-devel at build time; nvenc loads CUDA/NVENC at runtime.
vaapi = ["dep:libva"]
nvenc = ["dep:nvenc"]

[dependencies]
rdpcore-dvc = { path = "../rdpcore-dvc" }
rdpcore-pdu = { path = "../rdpcore-pdu" }
openh264 = { version = "0.9.7", optional = true, default-features = true }
libva = { version = "0.0.13", optional = true, package = "cros-libva" }
nvenc = { version = "0.1.0", optional = true }
tracing = "0.1.44"
libloading = "0.9.0"
