[package]
name = "rdpcore-rdpsnd"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "From-scratch MS-RDPEA (RDPSND) audio-output virtual channel: PDU codec + server backend trait"

[dependencies]
rdpcore-pdu = { path = "../rdpcore-pdu" }
tokio = { version = "1.52.3", features = ["sync"] }
