[package]
name = "rdpcore-pdu-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rdpcore-pdu = { path = ".." }

[[bin]]
name = "decode_wire"
path = "fuzz_targets/decode_wire.rs"
test = false
doc = false
bench = false
